--- a/www.html
+++ b/www.html
@@ -6,7 +6,7 @@
 		<!--屏幕自适应-->
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-		<title>测试</title>
+		<title></title>
 		<style type="text/css">
 			html,
 			body {
